--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "6.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
